h/tests/ui/type_annotations_needed.stderr
error: type annotations needed
       specify the key type manually by elaborating the `for {integer};` annotation
       note: integer sizes need to be specified exactly
 --> tests/ui/type_annotations_needed.rs:3:13
  |
3 |         for _;
  |             ^

error: type annotations needed
       specify the key type manually by elaborating the `for (i32, {integer});` annotation
       note: integer sizes need to be specified exactly
 --> tests/ui/type_annotations_needed.rs:8:13
  |
8 |         for (i32, _);
  |             ^^^^^^^^

error: type annotations needed
       specify the key type manually by prepending `for {integer};` to the macro input
       note: integer sizes need to be specified exactly
  --> tests/ui/type_annotations_needed.rs:13:9
   |
13 |         0 => (),
   |         ^
